# Peridynamics

./: .gitmodules  1D PD strcuture  Grid.hpp  LICENSE  Point_ani.h  Points.h  README  README.md  coloured_mesh.vtk  input_ani.h  main.cpp  mesh.h  trial1.cpp
1D_CPP/: Assemble_1D.h  CMakeLists.txt  Debug_1D.h  Hyperdual.h  Neighbour_1D.h  Points_1D.h  VTKExport_1D.h  main_1d.cpp  mesh_1D.cpp  mesh_1D.h  solver_1d.h  update_1D.h
CPP/: Assemble.h  CMakeLists.txt  Debug.h  Neighbour.h  Points.cpp  Points.h  UnitTest.cpp  UnitTest.h  VTKExport.h  compute.h  main.cpp  mesh.cpp  mesh.h  solver.h  update.h
PD -Ref-Code/: Grid.hpp  Makefile  compute.hpp  hyperdual.h  main.cpp  solver.hpp
PD-matlab/CPD-GLOBAL/: Assembly.m  AssignBCs.m  AssignNgbrs.m  AssignVols.m  Mesh.m  Patch.m  Plot.m  PointListInfo.m  PostProcess.m  SetMaterial.m  Topology.m  Update.m
PD-matlab/CPD-OBJECTS/: Point.m
PD-matlab/PROBLEM/: MainCPD.m  cspy.m  example_spyc.m  spyc.m
